NM - Update the syle sheets to resolve alignement issues and add the new information icon. Update project list with new sugested ordering by Roderick. Update sector pages to reflect the standard cw styling.

--- a/public/cw/stylesheets/sass/cw.scss
+++ b/public/cw/stylesheets/sass/cw.scss
@@ -207,7 +207,7 @@ Small hero banner no-tabs
 /*-------------------------------------------------------
 Results pagination make sit right
 ---------------------------------------------------------*/
-.light-pagination ul {float:right}
+#light-pagination ul {float:right}
 
 
 h1 span {
@@ -222,6 +222,68 @@ p.iati-id {font-size: 1em; float:right; padding-bottom: 12px; letter-spacing: 0.
 
 .ui-icon-info {float: left; margin:-0.1em 0.4em 0 0;}
 
+
+/*-------------------------------------------------------
+info tooltip icon
+---------------------------------------------------------*/
+.more-info-link {
+  display: inline-block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: #0b0c0c;
+  width: 26px; /* Width of new image */
+  height: 26px; /* Height of new image */
+  padding-left: 0px; /* Equal to width of new image */
+    border-radius: 100%;
+    position: relative;
+    top:4px;
+    &:hover {
+  background: #2c2c2c;   
+    }
+&:after {
+    content: "i";
+    font-size: 19px;
+    font-style: italic;
+    font-weight: bold;
+    font-family: Times New Roman;
+    color: #fff;
+    text-align: center;
+    display: block;
+    line-height: 26px;
+    
+    }
+    img{
+    display: none;
+}
+}
+
+.more-info-content {
+    background: #282b2b!important;
+
+    padding: 14px 18px;
+    color: #fff!important;
+    border: none;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 7px 6px 44px -2px rgba(0,0,0,0.23);
+    border-radius: 4px;
+    -webkit-box-shadow: 7px 6px 44px -2px rgba(0,0,0,0.23);
+-moz-box-shadow: 7px 6px 44px -2px rgba(0,0,0,0.23);
+box-shadow: 7px 6px 44px -2px rgba(0,0,0,0.23);
+//    &:after {
+//        bottom: 100%;
+//        right: 2%;
+//        border: solid transparent;
+//        content: " ";
+//        height: 0;
+//        width: 0;
+//        position: absolute;
+//        pointer-events: none;
+//	border-color: rgba(40, 43, 43, 0);
+//	border-bottom-color: #282b2b;
+//        border-width: 7px;
+//        margin-left: -7px;
+//}
+}
 
 /*-------------------------------------------------------
 Large Image links homepage
